--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
+  "engines":{
+    "node":">=16.20.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
