--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -22,8 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
-  "engines":{
-    "node":">=16.20.1"
+  "engines": {
+    "node": ">=16.20.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
