--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lowdb": "^6.1.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nanoid": "^5.0.2",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "engines": {
     "node": ">=16.20.1"
