--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nanoid": "^5.0.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "paypack-js": "^0.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
